# UnrealRemoteControlWrapper

./: MANIFEST.in  README.md  pyproject.toml  test_uremote.py  upyrc.py
src/upyrc/: upyrc.py  upyre.py
src/upyrc/re_templates/: add_command_json_output_pipe.jinja  close_widget_bp_from_id.jinja  fbx_static_mesh_export.jinja  fbx_static_mesh_import.jinja  log.jinja  run_editor_bp_method.jinja  run_editor_widget_bp_method.jinja  spawn_utility_widget_bp.jinja
src/upyrc/upyre_json_pipe/: upyre_json_pipe.py
tests/: test_remote_control.py  test_remote_exection_templates.py  test_remote_execution.py  test_uremote.py
